added script to html

--- a/public/index.html
+++ b/public/index.html
@@ -190,5 +190,7 @@
     <footer>
       <p>&copy; 2024 Tom Seifert. All rights reserved.</p>
     </footer>
+    <script src="spotify-auth.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
